experimental/parser/testdata/parser/field/options.proto.stderr.txt
error: compact options cannot be empty
  --> testdata/parser/field/options.proto:7:15
   |
 7 |     M bar = 2 [];
   |               ^^ help: remove this

error: unexpected `:` in compact option
  --> testdata/parser/field/options.proto:13:19
   |
13 |     M bad = 4 [foo: {bar: baz}];
   |                   ^
  help: replace this with an `=`
   |
13 | -     M bad = 4 [foo: {bar: baz}];
13 | +     M bad = 4 [foo = {bar: baz}];
   |
   = note: top-level `option` assignment uses `=`, not `:`

error: unexpected `=` in expression
  --> testdata/parser/field/options.proto:14:28
   |
14 |     M bad2 = 5 [foo = {bar = baz}];
   |                            ^
  help: replace this with an `:`
   |
14 | -     M bad2 = 5 [foo = {bar = baz}];
14 | +     M bad2 = 5 [foo = {bar: baz}];
   |
   = note: a message expression use `=`, not `:`, for setting fields

encountered 3 errors
